[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
gloo-events = "0.2.0"
gloo = "0.11.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'DomTokenList',
  'Window',
  'Storage',
  'console',
  'HtmlCollection',
  'HtmlInputElement',
  'HtmlButtonElement',
  'HtmlUListElement'
]